# FOOSIEngine

./: .gitignore  .gitmodules  404.html  CMakeLists.txt  JARGON.md  README.md  cmake-clean.sh  enginem.cpp  enginem.h  index.html  mkdocs.yml  quickbnr.sh  sitemap.xml  texture.cpp
.github/workflows/: cloc.yml  gh-pages.yml
ENGINE_FUNCTIONS/: index.html
UI/: index.html
api/: index.html
beginner/: index.html
conventions/: index.html
docs/: ENGINE_FUNCTIONS.md  UI.md  api.md  beginner.md  build.md  conventions.md  engine.md  index.md  input.md  objects.md  render.md  scene.md
engine/: CMakeLists.txt  coreclass.h  coreclass.json  enginem.cpp  enginem.h  index.html
engine/foogui/: foogui.cpp  foogui.h  ft2gl.cpp  ft2gl.h
engine/input/: keyboard.cpp  keyboard.h  mouse.cpp  mouse.h
engine/render/: camera_oclass.h  glAbstract.cpp  glAbstract.h  isometric_layer.cpp  isometric_layer.h  render_layer.cpp  render_layer.h  render_types.h  renderm.cpp  renderm.h  texture.cpp  texture.h
engine/scene/: scene_oclass.h  serialise.cpp  serialise.h
engine/tile/: tile_oclass.h  tilemap.cpp  tilemap.h  tmap_oclass.h
game/: CMakeLists.txt  USAGE.md  engine_api.h  foosiecfg.json  main.cpp  main.h  objclass.h  quickbnr.sh
game/assets/: grass_grid.json  objects.json  test.py  tiles.json
game/demo/: objects.json  tmap.json
game/demo/scn/: bob.fscn  test.fscn  test2.fscn  test_child.fscn
incl/: LICENSES.md
incl/glad/: glad.c  glad.h
input/: index.html
objects/: index.html
render/: index.html  renderm.cpp  texture.h
scene/: index.html
search/: search_index.json
testing/: embedded_shaders.h
tile/: tile.cpp  tile.h  tile_oclass.h  tilemap.cpp  tilemap.h
